home/static/home/css/home.css
.btn.bg-orange:hover,
.btn.bg-orange:focus {
  background: var(--secondary-orange);
  color: #fff;
  outline: 1px solid white;
}

.feature {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  height: 3rem;
  width: 3rem;
  font-size: 1.5rem;
}

/* CAROUSEL */

.carousel-item img {
  width: 200px;
  aspect-ratio: 1/ 1;
  object-fit: cover;
  border-radius: 50%;
}

.testimonial {
  max-width: 600px;
  font-size: 0.9rem;
}

.carousel-indicators button {
  border-radius: 50%;
  aspect-ratio: 1 / 1;
}

.carousel-indicators [data-bs-target] {
  width: 12px;
  height: 12px;
  background-color: #fff;
}

.carousel-indicators .active {
  background-color: var(--primary-orange);
}

